--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
         <span class="copy">hello</span>
     </main>
 
-<script src="bossEvent.js"></script>
+<script src="test.js"></script>
 </body>
 </html>
