--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     </main>
 
 <script src="test.js"></script>
+<a href='https://www.freepik.es/vectores/ondas-colores'>Vector de ondas de colores creado por Creative_hat - www.freepik.es</a>
 </body>
 </html>
