--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <input class="input" type="text">
         <button class="button">button</button>
         <span class="copy">hello</span>
+
+        <div id="ball"></div>
     </main>
 
 <script src="test.js"></script>
