--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="ball"></div>
     </main>
 
-<script src="test.js"></script>
+<script src="bossEvent.js"></script>
 
 </body>
 </html>
