--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <main>
-        <input class="input" type="text">
+       <!-- <input class="input" type="text">
         <button class="button">button</button>
-        <span class="copy">hello</span>
+        <span class="copy">hello</span>-->
 
         <div id="ball"></div>
     </main>
