--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <span class="copy">hello</span>-->
 
         <div id="ball"></div>
+        <div id="gun">
+            <div id="ammo"></div>
+        </div>
+        
     </main>
 
 <script src="bossEvent.js"></script>
