--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <div id="ammo"></div>
         </div>
         
+        <div id="enemy"></div>
     </main>
 
 <script src="bossEvent.js"></script>
