--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         </div>
         
         <div id="enemy"></div>
+        <div id="character"></div>
     </main>
 
 <script src="bossEvent.js"></script>
