--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,22 +8,26 @@
     <title>Document</title>
     <link rel="stylesheet" href="main.css">
 </head>
+
 <body>
     <main>
-       <!-- <input class="input" type="text">
+        <!-- <input class="input" type="text">
         <button class="button">button</button>
         <span class="copy">hello</span>-->
-
-        <div id="ball"></div>
-        <div id="gun">
-            <div id="ammo"></div>
+        <div id="prueba1">
+            <div id="ball"></div>
+            <div id="gun">
+                <div id="ammo"></div>
+            </div>
         </div>
-        
-        <div id="enemy"></div>
-        <div id="character"></div>
+        <div id="prueba2">
+            <div id="enemy"></div>
+            <div id="character"></div>
+        </div>
     </main>
 
-<script src="bossEvent.js"></script>
+    <script src="bossEvent.js"></script>
 
 </body>
+
 </html>
