--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/background.css">
 </head>
 
 <body>
     <main>
         <!-- <input class="input" type="text">
         <button class="button">button</button>
-        <span class="copy">hello</span>-->
+        <span class="copy">hello</span>
         <div id="prueba1">
             <div id="ball"></div>
             <div id="gun">
@@ -23,6 +23,9 @@
         <div id="prueba2">
             <div id="enemy"></div>
             <div id="character"></div>
+        </div>-->
+        <div id="background">
+            <div id="floor"></div>
         </div>
     </main>
 
