--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
     </main>
 
-    <script src="bossEvent.js"></script>
+    <!--<script src="bossEvent.js"></script>-->
 
 </body>
 
